--- a/style.css
+++ b/style.css
@@ -13,3 +13,11 @@ font-family: Arial, Helvetica, sans-serif;
     color: rgb(130, 130, 228);
     font-weight: bold;
 }
+
+#introcontainer{
+    width: 470px;
+}
+
+#Intropicture{
+    float: left;
+}
