--- a/style.css
+++ b/style.css
@@ -43,3 +43,8 @@ font-family: Arial, Helvetica, sans-serif;
 .socialmedia{
     float: left;
 }
+
+#maincontainer{
+    width: 850px;
+    margin: 0px auto;
+}
