--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: rgb(212, 107, 75);
-    margin: 0px;
+    background-color: #ffffff;
+    margin:  0px;
 font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -16,10 +16,13 @@ font-family: Arial, Helvetica, sans-serif;
 
 #introcontainer{
     width: 470px;
+    float: left;
+    margin: 0px 0px 0px 38px;
 }
 
 #Intropicture{
     float: left;
+    margin: 0px 0px 0px 13px;
 }
 
 .reset{
@@ -27,24 +30,34 @@ font-family: Arial, Helvetica, sans-serif;
 }
 
 #hobbycontainer{
-    width: 410px;
+    width: 229px;
+    height: 100px;
     float: left;
+    margin: 12px 0px 0px 37px;
+}
+
+#hobbycontainer h2{
+    margin: 0px;
 }
 
 #dnd{
     float: left;
+    margin: 44px 0px 42px 0px;
 }
 
 #Heroshot{
     float: left;
+    margin: 44px 0px 0px 0px;
 }
 
 
 .socialmedia{
     float: left;
+    margin: 0px 0px 0px 18px;
+    width: 56px;
+    height: 56px;
+    background-color: #ffffff;
+    text-align: center;
 }
 
-#maincontainer{
-    width: 850px;
-    margin: 0px auto;
-}
+
