--- a/style.css
+++ b/style.css
@@ -60,4 +60,9 @@ font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
 
-
+#paddingtest{
+    width: 300px;
+    height: 300px;
+    background-color: grey;
+    padding: 10px;
+}
