--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
 font-family: Arial, Helvetica, sans-serif;
 }
 
+/*Intro stuff
 #Introtext{
     color: #00f;
 
@@ -17,8 +18,10 @@ font-family: Arial, Helvetica, sans-serif;
 #introcontainer{
     width: 470px;
     float: left;
+    padding: 20px 0px 0px 0px;
     margin: 0px 0px 0px 38px;
 }
+*/
 
 #Intropicture{
     float: left;
@@ -65,4 +68,22 @@ font-family: Arial, Helvetica, sans-serif;
     height: 300px;
     background-color: grey;
     padding: 10px;
+    border-radius: 8px;
+}
+
+#navigation {
+    height: 10px;
+    margin: 0px 0px 30px 0px;
+}
+#navigation a {
+padding: 10px;
+background: green;
+color: #ffffff;
+text-decoration: none;
+border-radius: 7px;
+
+}  
+    
+#navigation a:hover {
+    color: chartreuse;
 }
