--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 font-family: Arial, Helvetica, sans-serif;
 }
 
-/*Intro stuff
+Intro stuff
 #Introtext{
     color: #00f;
 
@@ -21,7 +21,7 @@ font-family: Arial, Helvetica, sans-serif;
     padding: 20px 0px 0px 0px;
     margin: 0px 0px 0px 34px;
 }
-*/
+
 
 #Intropicture{
     float: left;
