--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
-    background-color: #ffffff;
+    background-color: #e75f5f;
     margin:  0px;
 font-family: Arial, Helvetica, sans-serif;
+background-image: url(Background.jpg);
 }
 
 Intro stuff
